--- a/SAKURA/src/app/mainContent/how-to-order/how-to-order.component.html
+++ b/SAKURA/src/app/mainContent/how-to-order/how-to-order.component.html
@@ -1,1 +1,24 @@
-<p>how-to-order works!</p>
+<div>
+    <h1>HOW TO ORDER</h1>
+    <section>
+        <div>
+            <img src="./../../../assets/img/2_section_how_to_order/PNG/noodle.png">
+            <span>
+                Pick your<br>noodle
+            </span>
+        </div>
+        <div>
+            <img src="./../../../assets/img/2_section_how_to_order/PNG/broth.png">
+            <span>
+                
+            </span>
+        </div>
+        <div>
+            <img src="./../../../assets/img/2_section_how_to_order/PNG/egg.png">
+            <span>
+                
+            </span>
+
+        </div>
+    </section>
+</div>
