add How to Order Section

--- a/SAKURA/src/app/mainContent/how-to-order/how-to-order.component.html
+++ b/SAKURA/src/app/mainContent/how-to-order/how-to-order.component.html
@@ -10,13 +10,13 @@
         <div>
             <img src="./../../../assets/img/2_section_how_to_order/PNG/broth.png">
             <span>
-                
+                Pick your <br> broth
             </span>
         </div>
         <div>
             <img src="./../../../assets/img/2_section_how_to_order/PNG/egg.png">
             <span>
-                
+                Add our <br> toppings
             </span>
 
         </div>
