--- a/SAKURA/src/app/mainContent/how-to-order/how-to-order.component.scss
+++ b/SAKURA/src/app/mainContent/how-to-order/how-to-order.component.scss
@@ -16,9 +16,21 @@ h1 {
   color: red;
   margin-top: 120px;
   margin-bottom: 64px;
-  > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  // > div {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
+}
+
+span{
+  font-family: economica;
+  font-size: 56px;
+}
+
+section{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 120px;
 }
