--- a/SAKURA/src/app/footer/footer.component.html
+++ b/SAKURA/src/app/footer/footer.component.html
@@ -1,1 +1,11 @@
-<p>footer works!</p>
+<section>
+    <div>
+        <img src="./../../assets/img/5_section_footer/SVG/sakura_ramen_logo_and_text.svg">
+    
+    </div>
+    <div>
+        <img src="./../../assets/img/5_section_footer/SVG/tripadvisor_logo.svg" alt="tripadvisor">
+        <img src="./../../assets/img/5_section_footer/SVG/facebook_logo.svg" alt="facebook">
+        <img src="./../../assets/img/5_section_footer/SVG/instagram_logo.svg" alt="instagramm">
+    </div>
+</section>
