--- a/SAKURA/src/app/mainContent/menue/menue.component.html
+++ b/SAKURA/src/app/mainContent/menue/menue.component.html
@@ -1,1 +1,31 @@
-<p>menue works!</p>
+<section>
+    <h1>OUR MENU</h1>
+    <div>
+        <img src="./../../../assets/img/3_section_our_menu/Png/R1.png">
+        <table>
+            <th colspan="2">Tonkotsu Ramen</th>
+            <tr><td>CHICKEN</td><td>11,95</td></tr>
+                <tr><td>BEEF</td><td>12,95</td></tr>
+                <tr><td>SHRIMP</td><td>13,95</td></tr>
+        </table>
+    </div>
+    <div>
+        <table>
+            <th colspan="2">Spicy Miso Ramen</th>
+            <tr><td>CHICEN</td><td>11,95</td></tr>
+                <tr><td>BEEF</td><td>12,95</td></tr>
+                <tr><td>SHRIMP</td><td>13,95</td></tr>
+        </table>
+        <img src="./../../../assets/img/3_section_our_menu/Png/R2.png">
+        
+    </div>
+    <div class="paBo">
+        <img src="./../../../assets/img/3_section_our_menu/Png/R3.png">
+        <table>
+            <th colspan="2">Shino Ramen</th>
+            <tr><td>CHICKEN</td><td>11,95</td></tr>
+                <tr><td>BEEF</td><td>12,95</td></tr>
+                <tr><td>SHRIMP</td><td>13,95</td></tr>
+        </table >
+    </div>
+</section>
